# bitlbee-mastodon

./: .gitignore  HISTORY.md  Makefile.am  README  README.md  RELEASE.md  configure.ac
doc/: HELP.md  Makefile.am  mastodon-help.txt
src/: Makefile.am  mastodon-http.c  mastodon-http.h  mastodon-lib.c  mastodon-lib.h  mastodon-websockets.c  mastodon-websockets.h  mastodon.c  mastodon.h  rot13.c  rot13.h  websockets.md
